--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,11 +19,11 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python {{ python_min }}
     - setuptools
     - pip
   run:
-    - python >=3.8
+    - python >={{ python_min }}
     - rasterio >=1.3.6
     - opencv >=4.8
     - pyyaml >=5
@@ -40,6 +40,7 @@ test:
   requires:
     - pip
     - libopencv *=headless*  # [linux]
+    - python {{ python_min }}
 
 about:
   summary: Orthorectification of drone, aerial and satellite imagery.
